Fixing MANIFET.in to include CHANGES.txt and CONTRIBUTORS.txt

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,13 @@
 Changelog
 =========
 
-0.1 (2020-12-06)
-----------------
+0.1.0 (2020-12-06)
+------------------
 
 - First release
+
+0.1.1 (2020-12-06)
+------------------
+
+- Fixed packaging error with MANIFEST.in
+
